[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/EXP-System-Dialog/Story Editor/Rename Record Box/rename_record_box.gd" type="Script" id=1]

[node name="Record_Rename_Box" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -193.0
margin_top = -64.0
margin_right = 193.0
margin_bottom = 52.0
rect_min_size = Vector2( 386, 116 )
size_flags_horizontal = 3
size_flags_vertical = 3
window_title = "Rename Dialog Record"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 370.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name_LBL" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 370.0
margin_bottom = 14.0
text = "Name:"

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 370.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 4 )

[node name="Name_LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 370.0
margin_bottom = 50.0

[node name="Spacer3" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 370.0
margin_bottom = 58.0
rect_min_size = Vector2( 0, 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 370.0
margin_bottom = 82.0
alignment = 1

[node name="Cancel_BTN" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 106.0
margin_right = 160.0
margin_bottom = 20.0
text = "Cancel"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 164.0
margin_right = 196.0
margin_bottom = 20.0
rect_min_size = Vector2( 32, 0 )

[node name="Rename_BTN" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 200.0
margin_right = 264.0
margin_bottom = 20.0
text = "Rename"
[connection signal="text_entered" from="MarginContainer/VBoxContainer/Name_LineEdit" to="." method="_on_Name_LineEdit_text_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Cancel_BTN" to="." method="_on_Cancel_BTN_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Rename_BTN" to="." method="_on_Rename_BTN_pressed"]
